[gd_scene load_steps=8 format=3 uid="uid://cm40v7dsxq3ef"]

[ext_resource type="Script" path="res://scripts/projectiles/shroomy_projectile.gd" id="1_8fdfb"]
[ext_resource type="Texture2D" uid="uid://cbc86f61breph" path="res://assets/projectiles/shroomy-projectile.png" id="2_d536e"]

[sub_resource type="CircleShape2D" id="CircleShape2D_xjy56"]
radius = 12.1212

[sub_resource type="Animation" id="Animation_c5go4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_iyvad"]
resource_name = "float"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -10), Vector2(0, 0), Vector2(0, 10), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 0, 0, 0, 0]
}

[sub_resource type="Animation" id="Animation_eq1ta"]
resource_name = "pop"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rbobf"]
_data = {
"RESET": SubResource("Animation_c5go4"),
"float": SubResource("Animation_iyvad"),
"pop": SubResource("Animation_eq1ta")
}

[node name="ShroomyProjectile" type="Area2D"]
scale = Vector2(0.75, 0.75)
script = ExtResource("1_8fdfb")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_d536e")
hframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(1.32, 1.4)
shape = SubResource("CircleShape2D_xjy56")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rbobf")
}
speed_scale = 1.996

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
